Fixed alignment on profile image and added margin below it

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -125,14 +125,14 @@ header {
         position: absolute;
         width: 160px;
         height: 160px;
-        top: -180px;
+        top: -190px;
         margin-left: -80px;
         left: 50%;
     }
 
     .name {
         font-size: 48px;
-        margin-bottom: 15px;
+        margin: 20px 0 15px 0;
         letter-spacing: 0.5px;
     }
 
